--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +30,19 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+#bill-container {
+  display: flex;
+  flex-direction: column;
+}
+
+#buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#add {
+  margin-top: 1rem;
+  font-size: 2rem;
 }
